 2013-08-22 06:57  dimitr 
   M builds/win32/make_examples.bat
Allow examples to be built without the running server.

 2013-08-22 06:24  dimitr 
   M builds/win32/make_all.bat
Added READMEs to Windows snapshots.

 2013-08-21 10:36  alexpeshkoff 
   M src/jrd/jrd.cpp
Backported postfixes for CORE-3935 & CORE-3944: helps avoid segfaults/deadlocks when shutting down firebird

 2013-08-02 13:45  hvlad 
   M src/jrd/jrd.cpp
   M src/jrd/trace/TraceConfigStorage.cpp
   M src/jrd/trace/TraceConfigStorage.h
Fixed bug CORE-4143 : Leak memory in fbembed.dll

 2013-07-22 16:20  dimitr 
   M doc/WhatsNew
Updated the docs.

 2013-07-22 16:18  dimitr 
   M doc/WhatsNew
Updated the docs.

 2013-07-22 07:47  hvlad 
   M src/dsql/gen.cpp
Fixed bug CORE-4144 : Error "context already in use (BLR error)" when preparing a query with UNION 

 2013-07-22 07:36  alexpeshkoff 
   M builds/posix/Makefile.in.examples
   M builds/posix/Makefile.in.firebird
Patch from LO

 2013-07-19 08:42  hvlad 
   M src/dsql/dsql.h
   M src/dsql/pass1.cpp
Fixed bug CORE-4005 : wrong error message with recursive CTE

 2013-07-17 11:45  paulbeach 
   A builds/install/arch-specific/darwin/embed.Info.plist
   A builds/install/arch-specific/darwin/embed.darwin
Add support for embedded mode on MacOSX as an app bundle as well as the existing framework

 2013-07-17 10:18  paulbeach 
   M src/jrd/os/darwin/config_root.cpp
   M src/jrd/os/darwin/mod_loader.cpp
Update mod_loader to use Posix dl functions rather than deprecated NS functions. Add support for embedded mode on MacOSX as an app bundle as well as the existing framework

 2013-07-15 13:52  dimitr 
   M src/jrd/lck.cpp
Fixed the sweep lock owner. This is a complementary bugfix for CORE-4134 (Race condition when auto-sweep is started).

 2013-07-08 14:30  hvlad 
   M src/jrd/jrd.cpp
Backport fix for bug CORE-4135 :  In SS sweep blocks establishment of concurrent attachments

 2013-07-08 14:29  hvlad 
   M src/jrd/Database.cpp
   M src/jrd/Database.h